--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -1,14 +1,15 @@
 {
   "type": "postgres",
-  "host": "db",
-  "port": 5432,
-  "username": "postgres",
-  "password": "postgres",
-  "database": "user",
-  "entities": ["src/**/*.entity.ts"],
-  "migrations": ["src/migrations/*.ts"],
+  "host": "${DB_HOST}",
+  "port": "${DB_PORT}",
+  "username": "${DB_USERNAME}",
+  "password": "${DB_PASSWORD}",
+  "database": "${DB_DATABASE}",
+  "synchronize": "${DB_SYNCHRONIZE}",
+  "logging": "${DB_LOGGING}",
+  "entities": ["dist/**/*.entity{.ts,.js}"],
+  "migrations": ["dist/migration/**/*.js"],
   "cli": {
-    "migrationsDir": "src/migrations"
-  },
-  "synchronize": false
+    "migrationsDir": "src/migration"
+  }
 }
